[gd_scene load_steps=2 format=3 uid="uid://1afeklw6eo37"]

[ext_resource type="Script" uid="uid://xwaks5myh7ei" path="res://Ui/shop_item.gd" id="1_o0sv7"]

[node name="ShopItem" type="Button"]
process_mode = 2
custom_minimum_size = Vector2(73, 25)
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_o0sv7")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
